// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Login Correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Welcome to
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 30,
        "fontWeight": "bold",
        "marginVertical": 10,
      }
    }
  >
    DevHub
  </Text>
  <CustomTextInput
    autoCapitalize="none"
    keyboardType="email-address"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Email"
    returnKeyType="next"
  />
  <CustomTextInput
    autoCapitalize="none"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Password"
    returnKeyType="done"
    secureTextEntry={true}
  />
  <CustomButton
    color="#008BA3"
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Login
    </Text>
  </CustomButton>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "alignSelf": "center",
        "bottom": 30,
        "position": "absolute",
      }
    }
  >
    Register here
  </Text>
</Component>
`;

exports[`Testing Login button to change state State changes as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Welcome to
        </Text>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            }
          }
        >
          DevHub
        </Text>,
        <CustomTextInput
          autoCapitalize="none"
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Email"
          returnKeyType="next"
        />,
        <CustomTextInput
          autoCapitalize="none"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Password"
          returnKeyType="done"
          secureTextEntry={true}
        />,
        <CustomButton
          color="#008BA3"
          onPress={[Function]}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Login
          </Text>
        </CustomButton>,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "center",
              "bottom": 30,
              "position": "absolute",
            }
          }
        >
          Register here
        </Text>,
      ],
      "style": Object {
        "backgroundColor": "white",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Welcome to",
          "ellipsizeMode": "tail",
        },
        "ref": null,
        "rendered": "Welcome to",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "DevHub",
          "ellipsizeMode": "tail",
          "style": Object {
            "fontSize": 30,
            "fontWeight": "bold",
            "marginVertical": 10,
          },
        },
        "ref": null,
        "rendered": "DevHub",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "keyboardType": "email-address",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Email",
          "returnKeyType": "next",
        },
        "ref": [Function],
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoCapitalize": "none",
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "placeholder": "Password",
          "returnKeyType": "done",
          "secureTextEntry": true,
        },
        "ref": [Function],
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
              }
            }
          >
            Login
          </Text>,
          "color": "#008BA3",
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Login",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
            },
          },
          "ref": null,
          "rendered": "Login",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Register here",
          "ellipsizeMode": "tail",
          "style": Object {
            "alignSelf": "center",
            "bottom": 30,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": "Register here",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Welcome to
          </Text>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 30,
                "fontWeight": "bold",
                "marginVertical": 10,
              }
            }
          >
            DevHub
          </Text>,
          <CustomTextInput
            autoCapitalize="none"
            keyboardType="email-address"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Email"
            returnKeyType="next"
          />,
          <CustomTextInput
            autoCapitalize="none"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Password"
            returnKeyType="done"
            secureTextEntry={true}
          />,
          <CustomButton
            color="#008BA3"
            onPress={[Function]}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Login
            </Text>
          </CustomButton>,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "center",
                "bottom": 30,
                "position": "absolute",
              }
            }
          >
            Register here
          </Text>,
        ],
        "style": Object {
          "backgroundColor": "white",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Welcome to",
            "ellipsizeMode": "tail",
          },
          "ref": null,
          "rendered": "Welcome to",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "DevHub",
            "ellipsizeMode": "tail",
            "style": Object {
              "fontSize": 30,
              "fontWeight": "bold",
              "marginVertical": 10,
            },
          },
          "ref": null,
          "rendered": "DevHub",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "keyboardType": "email-address",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Email",
            "returnKeyType": "next",
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoCapitalize": "none",
            "onChangeText": [Function],
            "onSubmitEditing": [Function],
            "placeholder": "Password",
            "returnKeyType": "done",
            "secureTextEntry": true,
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Login
            </Text>,
            "color": "#008BA3",
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Login",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
              },
            },
            "ref": null,
            "rendered": "Login",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Register here",
            "ellipsizeMode": "tail",
            "style": Object {
              "alignSelf": "center",
              "bottom": 30,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": "Register here",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
